pod-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod
spec:
 
 containers:
 - name: data-processor
   image: data-processor


 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            # or 'Exists' to check if the label 'size' exists on the node. Dont need 'values' section
            # or NotIn
            operator: In 
            values: 
            - Large
            - Medium
