pod-selector-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - image: redis
    name: redis

  nodeSelector:
    size: Large
